--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
   "require": {
     "symfony/framework-bundle": "^4.4 | ^5.0",
     "rikudou/psr6-dynamo-db": "^2.0",
-    "php": "^7.2 | ^8.0",
-    "symfony/cache": "^4.4 | ^5.0",
+    "php": "^7.2 | ^8.0 | ^8.1",
+    "symfony/cache": "^4.4 | ^5.0 | ^6.0",
     "ext-json": "*"
   },
   "autoload": {
